Closed Bug 1382178 Opened 7 years ago Closed 7 years ago

Crash in mozilla::net::nsHttpChannel::ContinueProcessResponse2

Categories

(Core :: Networking, defect)

Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox-esr52 --- wontfix
firefox55 --- wontfix
firefox56 --- fixed
firefox57 --- fixed

People

(Reporter: swu, Assigned: xeonchen)

References

Details

(Keywords: crash, Whiteboard: [necko-active])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-bfc4259a-ef5b-46c4-91a8-034990170719.
=============================================================

Crashing Thread (0)
Frame 	Module 	Signature 	Source
0 	xul.dll 	mozilla::net::nsHttpChannel::ContinueProcessResponse2(nsresult) 	netwerk/protocol/http/nsHttpChannel.cpp:2528
1 	xul.dll 	mozilla::net::nsHttpChannel::ContinueProcessResponse1() 	netwerk/protocol/http/nsHttpChannel.cpp:2384
2 	xul.dll 	mozilla::net::nsHttpChannel::AsyncContinueProcessResponse() 	netwerk/protocol/http/nsHttpChannel.cpp:2298
3 	xul.dll 	mozilla::detail::RunnableMethodImpl<mozilla::net::HttpChannelChild* const, void ( mozilla::net::HttpChannelChild::*)(void), 0, 0>::Run() 	obj-firefox/dist/include/nsThreadUtils.h:1187
4 	xul.dll 	nsThread::ProcessNextEvent(bool, bool*) 	xpcom/threads/nsThread.cpp:1437
5 	xul.dll 	mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) 	ipc/glue/MessagePump.cpp:97
6 	xul.dll 	MessageLoop::RunHandler() 	ipc/chromium/src/base/message_loop.cc:313
7 	xul.dll 	MessageLoop::Run() 	ipc/chromium/src/base/message_loop.cc:293
8 	xul.dll 	nsBaseAppShell::Run() 	widget/nsBaseAppShell.cpp:156
9 	xul.dll 	nsAppShell::Run() 	widget/windows/nsAppShell.cpp:271
10 	xul.dll 	nsAppStartup::Run() 	toolkit/components/startup/nsAppStartup.cpp:287
11 	xul.dll 	XREMain::XRE_mainRun() 	toolkit/xre/nsAppRunner.cpp:4596
12 	xul.dll 	XREMain::XRE_main(int, char** const, mozilla::BootstrapConfig const&) 	toolkit/xre/nsAppRunner.cpp:4779
13 	xul.dll 	XRE_main(int, char** const, mozilla::BootstrapConfig const&) 	toolkit/xre/nsAppRunner.cpp:4874
14 	firefox.exe 	NS_internal_main(int, char**, char**) 	browser/app/nsBrowserApp.cpp:309
15 	firefox.exe 	wmain 	toolkit/xre/nsWindowsWMain.cpp:115
16 	firefox.exe 	__scrt_common_main_seh 	f:/dd/vctools/crt/vcstartup/src/startup/exe_common.inl:253
17 	kernel32.dll 	BaseThreadInitThunk 	
18 	ntdll.dll 	RtlUserThreadStart
Gary, is it similar to bug 1351340?
Flags: needinfo?(xeonchen)
Assignee: nobody → xeonchen
Flags: needinfo?(xeonchen)
Whiteboard: [necko-active]
Comment on attachment 8888644 [details]
Bug 1382178 - check null pointer before using;

https://reviewboard.mozilla.org/r/159670/#review168762
Attachment #8888644 - Flags: review?(daniel) → review+
Pushed by gachen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/22b4bbcf9d19
check null pointer before using; r=bagder
https://hg.mozilla.org/mozilla-central/rev/22b4bbcf9d19
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Please nominate this for Beta approval when you get a chance.
Flags: needinfo?(swu)
Flags: needinfo?(swu) → needinfo?(xeonchen)
Comment on attachment 8888644 [details]
Bug 1382178 - check null pointer before using;

Approval Request Comment
[Feature/Bug causing the regression]: N/A
[User impact if declined]: May randomly crash
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: not yet
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: no
[Is the change risky?]: not at all
[Why is the change risky/not risky?]: simply checks pointer before access.
[String changes made/needed]: no
Flags: needinfo?(xeonchen)
Attachment #8888644 - Flags: approval-mozilla-beta?
Comment on attachment 8888644 [details]
Bug 1382178 - check null pointer before using;

Fix a crash. Beta56+. Should be in 56.0b3.
Attachment #8888644 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
(In reply to Gary Chen [:xeonchen] (needinfo plz) from comment #8)
> [Is this code covered by automated tests?]: no
> [Has the fix been verified in Nightly?]: not yet
> [Needs manual test from QE? If yes, steps to reproduce]: no

Setting qe-verify- based on Gary's assessment on manual testing needs.
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.