Bug 1382178 - Check null pointer before using. r=bagder, a=gchang

MozReview-Commit-ID: CjfWL39mYSP

--HG--
extra : source : 22b4bbcf9d19914e7eda5b8156cd4cff54210269